--- a/gb/24/1/23/n14164797.md
+++ b/gb/24/1/23/n14164797.md
@@ -3,55 +3,50 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>费时7年 台湾首个炖饭米问世</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/01/id14164798-660965-600x400.jpg" />
-<h6>台湾首个炖饭米“花莲26号”。（花莲农改场提供）
-</h6>
+<h6>台湾首个炖饭米“花莲26号”。（花莲农改场提供）</h6>
 <hr>
 <p>【大纪元2024年01月23日讯】（大纪元记者赖玟茹台湾台北报导）炖饭是许多人喜爱的美食之一，农业部花莲区农业改良场费时7年，育成台湾首个炖饭米“花莲26号”。技转业者向《大纪元时报》表示，“花莲26号”确实吸水力强、糊化程度明显，米粒更弹牙，餐厅主厨也很乐见有这款米问世。</p>
 <p>花莲区农改场副研究员黄佳兴23日表示，炖饭是受国人喜爱的西方米食料理，其中最为国人所熟知的就是意大利炖饭，从103年开始，意大利米的进口量平均都在100公吨以上。在此基础下，也希望藉由育种方式，发展在地米种取代；历经7年努力，花莲区农改场以台东30号为父本、意大利Vialone<br />
 Nano为母本，最终诞生出“花莲26号”。</p>
-<figure id="attachment_14164799" aria-describedby="caption-attachment-14164799" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14164799-660966.jpg"><img loading="lazy" decoding="async" class="size-medium wp-image-14164799" src="https://i.epochtimes.com/assets/uploads/2024/01/id14164799-660966-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-14164799" class="wp-caption-text">台湾首个炖饭米“花莲26号”。（花莲农改场提供）</figcaption></figure>
+<figure id="attachment_14164799" aria-describedby="caption-attachment-14164799" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14164799-660966.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-medium wp-image-14164799" src="https://i.epochtimes.com/assets/uploads/2024/01/id14164799-660966-450x300.jpg" alt="" width="450" b="300"></a><figcaption id="caption-attachment-14164799" class="wp-caption-text">台湾首个炖饭米“花莲26号”。（花莲农改场提供）</figcaption></figure>
 <p>谈到“花莲26号”具备3高1低的优点，黄佳兴表示，包括“千粒重高”，大粒耐煮；“直链淀粉较粳稻高”，达到粒粒分明口感；“心白比例高”，可大幅提高汤汁吸收，口感也较弹牙；“食物里程低”，相对于进口米输入路线长达1万5,272公里，花莲产出到台北消费地仅278公里，环保且减少暖化因素。</p>
 <p>黄佳兴说，“花莲26号”始于炖饭，但是不止于炖饭，还可以做意大利炸饭团、黄金炒饭、披萨、米布丁、日式饭汤等，其中披萨皮融入“花莲26号”米谷粉，更显脆中带Q。</p>
 <p>至于全台种植面积及消费者购买方式，黄佳兴表示，去年二期作仅产出2、3公吨，已被餐厅订走；希望今年二期作可推广栽种达30公顷以上，未来零售价，每公斤可能贴近进口货新台币200元。</p>
-<p>花莲区农改场场长杨大吉表示，“花莲26号”品质好，市场目标并不仅限于国内，也会往单价高、已肯定台湾农产品质的日本等外销市场拓销。</p>
+<p>花莲区农改场场长杨大吉表示，“花莲26号”品质好，市场目标并不仅限于国内，也会往单价高、已肯定台湾农产品质的日本等外销市场拓销。
+</p>
 <h2>业者：品质优于意大利米</h2>
-<p>花莲农改场在记者会上，也与三家业者及农会签约技转“花莲26号”。业者联采公司向《大纪元时报》表示，有餐厅比较“花莲26号”与进口意大利米后发现，“花莲26号”确实吸水力强、糊化程度非常明显，餐厅主厨也很乐见有这款米出现。只是种植门槛高，例如因植株高、易倾倒，仍需要一段时间驯化。</p>
+<p>
+花莲农改场在记者会上，也与三家业者及农会签约技转“花莲26号”。业者联采公司向《大纪元时报》表示，有餐厅比较“花莲26号”与进口意大利米后发现，“花莲26号”确实吸水力强、糊化程度非常明显，餐厅主厨也很乐见有这款米出现。只是种植门槛高，例如因植株高、易倾倒，仍需要一段时间驯化。</p>
 <p>业者也谈到，过去因为疫情导致海运卡关，加上去年遇到旱灾，导致意大利米短缺，因此更希望能将在地食材“米”供应链建构起来。◇</p>
 <p>责任编辑：陈真</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/13/n14201388.md#1">谈苏丹红风波 义美总座：应执行源头禁绝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/8/n14197788.md#1">台塑餐饮麻辣锅底含苏丹红 台塑：非集团子公司</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/21/n14185813.md#1">波湾食品展 贸协领15台厂抢攻清真商机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/18/n14056448.md#1">台南东山区的龙眼 风土不同造就的独特品质和挑战</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/13/n13906308.md#1">超商茶叶蛋涨至13元 全联抗涨喊一颗9元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/28/n13834040.md#1">传统心法孕育世界级巧克力——客家青农曾志元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/12/n13801112.md#1">小农咖啡QR code活动结束 台糖：勿开启危险网页</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/11/n13800244.md#1">食品业2亿行销补助 台经长估增加6000万美元收入</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/29/n13791807.md#1">台糖绿电3成供中小企业 调整光电建置期程底价</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/7/n10835148.md#1" target="_blank">中华传统文化之叹——消逝的城墙（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/2/n8993904.md#1" target="_blank">【细语人生】见证大法的神奇（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/28/n11616929.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（三）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/21/n11398694.md#1" target="_blank">7·20华府演讲 大卫·乔高：中共是杀人犯</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330857.md#1">“人造月亮”照亮的中秋节 “西方极乐世界”给人展现了什么?</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14330096.md#1">【未解之谜】与高白外星人共事两年（上）：神秘传说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/10/n14327659.md#1">中秋节：月亮 嫦娥和月饼交织天上人间的情缘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14332006.md#1">【未解之谜】与高白外星人共事两年（下）：秘密合作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/13/n14329618.md#1">“月夕”和“夕月”展现古今两个不一样的中秋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/18/n14333808.md#1">【马克时空】德军舰过台海 F125巡防舰实力如何</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/17/n14333123.md#1">【财经非常道】“超级央行周”降息 牵动人心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/6/n14196280.md#1">【思想领袖】揭秘中共数十年来控制南海的战略</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14332201.md#1">大连超市收到两张同号百元钞票 验不出真假</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/17/n14332775.md#1">红卫兵头目宋彬彬去世 十年前为文革罪行道歉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14332175.md#1">拍《热辣滚烫》曾减肥50公斤 贾玲复胖引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330971.md#1">港星徐少强病故 妻料理后事时突发心脏病猝逝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/17/n14333022.md#1">《喜结良缘》首日14人次观看 票房仅642元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14331237.md#1">艾美奖得奖名单 《幕府将军》男女主角封帝后 共拿18奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14331652.md#1">组图：艾美奖红毯 女明星高端礼服竞艳</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/16/n14331412.md#1">牙医：早餐中常见的这些食物伤牙 要小心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/17/n14332666.md#1">为什么人们刚想到的事情马上就忘记？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14327027.md#1">中秋吃月饼、烤肉无负担 中医授三招减脂攻略</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/15/n14330811.md#1">食物收纳应注意哪些？ 这3类物品应分隔放</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/11/n14328404.md#1">新研究：5:2间歇性禁食有益老人大脑健康</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/23/n14164797.htm">费时7年 台湾首个炖饭米问世</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/23/n14164797.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
